--- a/src/assets/styles/responsive.css
+++ b/src/assets/styles/responsive.css
@@ -16,12 +16,14 @@
   .layout-dashboard .header-control .sidebar-toggler {
     display: none;
   }
+  
 }
 
 @media (min-width: 768px) {
   .layout-dashboard .ant-layout-header {
     margin: 10px 20px;
   }
+  
   .layout-dashboard .header-control {
     margin-top: 0;
   }
@@ -70,5 +72,9 @@
 @media (max-width: 768px) {
   .layout-dashboard.layout-dashboard-rtl .header-control {
     justify-content: flex-end;
+  }
+  .layout-dashboard .ant-layout-content {
+    padding: 0;
+    margin: 0 20px 0 ; 
   }
 }
