--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,14 +1,4 @@
-/*!
-=========================================================
-* Muse Ant Design Dashboard - v1.0.0
-=========================================================
-* Product Page: https://www.creative-tim.com/product/muse-ant-design-dashboard
-* Copyright 2021 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://github.com/creativetimofficial/muse-ant-design-dashboard/blob/main/LICENSE.md)
-* Coded by Creative Tim
-=========================================================
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-*/
+
 body {
   padding: 0 0 30px 0;
   background-color: #fafafa;
@@ -133,9 +123,9 @@ body {
 .layout-dashboard .ant-layout-sider.sider-primary .ant-menu-item .active,
 .layout-dashboard .ant-layout-sider.sider-primary .ant-menu-submenu.ant-menu-item-selected .active,
 .layout-dashboard .ant-layout-sider.sider-primary .ant-menu-submenu .active {
-  background-color: blue;
-  box-shadow: 0 20px 27px rgb(0 0 0 / 5%);
-  font-weight: 600;
+  background-color: transparent;
+  /* box-shadow: 0 20px 27px rgb(0 0 0 / 5%); */
+  font-weight: bold;
 }
 
 .layout-dashboard .ant-layout-sider.sider-primary .ant-menu-item a,
