--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,4 +1,3 @@
-
 body {
   padding: 0 0 30px 0;
   background-color: #fafafa;
@@ -11,7 +10,8 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
-.profile-photo{
+
+.profile-photo {
   border-radius: 100%;
 }
 
@@ -31,7 +31,7 @@ body {
     overflow: auto;
   }
 
-  
+
 }
 
 .layout-dashboard .ant-layout-sider.sider-primary {
@@ -58,19 +58,20 @@ body {
 
 .layout-dashboard .ant-layout-sider.sider-primary .brand {
   font-weight: 600;
-  
+
 }
 
 .layout-dashboard .ant-layout-sider.sider-primary .profile {
   display: grid;
   justify-items: center;
-  color:#fff;
+  color: #fff;
 }
 
 .layout-dashboard .ant-layout-sider.sider-primary .profile img {
   width: 50px;
   height: 50px;
 }
+
 .layout-dashboard .ant-layout-sider.sider-primary .brand span {
   vertical-align: middle;
   margin-left: 3px;
@@ -302,7 +303,8 @@ body {
 .menu-border {
   border-bottom: 1px solid #f0f0f0;
 }
-.ant-popover-inner-content{
+
+.ant-popover-inner-content {
   padding: 0;
 }
 
@@ -316,19 +318,20 @@ body {
 /* end #sidebar */
 
 /* #global setting */
-.ant-form-large .ant-form-item-label > label {
+.ant-form-large .ant-form-item-label>label {
   height: auto;
-  
+
 }
 
-.font-small{
+.font-small {
   font-size: 14px;
-    line-height: 16px;
+  line-height: 16px;
 }
 
-.font-normal{
+.font-normal {
   font-size: 16px;
 }
+
 /*  #end global setting */
 
 
@@ -372,7 +375,7 @@ body {
   background: transparent;
   height: auto;
   padding: 16px;
-  margin: 10px 4px;
+  margin: 10px;
   line-height: inherit;
   border-radius: 12px;
   transition: 0.2s;
@@ -1350,9 +1353,10 @@ span.ismobile {
   .footer-menu ul {
     justify-content: center;
   }
+
   .layout-dashboard .ant-layout-content {
     padding: 0;
-    margin: 0 20px 0 ; 
+    margin: 0 20px 0;
   }
 
   footer.ant-layout-footer {
@@ -2264,7 +2268,7 @@ body {
     margin: 0;
   }
 
- 
+
 
   .card-signup {
     margin-bottom: 120px;
@@ -2310,7 +2314,7 @@ button.ant-btn.bell strong {
 
 .layout-dashboard .ant-layout-content {
   padding: 0;
-  margin: 0 ; 
+  margin: 0;
 }
 
 .m-10,
@@ -3171,6 +3175,72 @@ section.ant-layout.ant-layout-has-sider.layout-dashboard.layout-profile .header-
   fill: #8c8c8c;
 }
 
+
+/* #header start */
+
+.user-pop {
+  width: 18rem;
+  border-width: 1px;
+  border-color: #7f8c9f;
+}
+
+.user-pop ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.user-pop ul li .navlink {
+  display: flex;
+  width: full;
+  padding-left: 1rem
+ 
+  ;
+  padding-right: 1rem
+
+  ;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  align-items: flex-start;
+  color:#000;
+}
+.user-pop ul li .navlink:hover{
+  background-color: #f7fafc;
+color:#0063c1;
+}
+
+.flex-col{
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-justify-center{
+  display: flex;
+  align-items: center;
+  justify-items: center;
+}
+
+.text-base {
+  font-size: 1rem/* 16px */;
+}
+.text-xs {
+  font-size: 0.75rem/* 12px */;
+}
+
+.primary-btn {
+  background-color: #37a703;
+  color: #fff;
+  padding-bottom: 20px; 
+}
+/* #header end */
+
+
+
+
+
+
+
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
   display: none;
@@ -3178,9 +3248,12 @@ section.ant-layout.ant-layout-has-sider.layout-dashboard.layout-profile .header-
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
+
 /*! destyle.css v2.0.2 | MIT License | https://github.com/nicolas-cusan/destyle.css */
 
 /* Reset box-model and set borders */
