--- a/src/assets/styles/responsive.css
+++ b/src/assets/styles/responsive.css
@@ -21,7 +21,7 @@
 
 @media (min-width: 768px) {
   .layout-dashboard .ant-layout-header {
-    margin: 10px 20px;
+    margin: 10px ;
   }
   
   .layout-dashboard .header-control {
