--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -404,7 +404,7 @@ body {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown {
@@ -1385,7 +1385,7 @@ span.ismobile {
   }
 
   main.ant-layout-content.content-ant {
-    padding-left: 0px !important;
+    padding-left: 200px !important;
   }
 
   .ant-row {
@@ -2314,7 +2314,6 @@ button.ant-btn.bell strong {
 
 .layout-dashboard .ant-layout-content {
   padding: 0;
-  margin: 0;
 }
 
 .m-10,
