--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -6,8 +6,15 @@ body {
   font-size: 14px;
   line-height: 1.6;
   font-weight: 400;
-  /* font-family: open sans, Helvetica, Arial, sans-serif; */
-  font-family: 'Inter', sans-serif;
+  font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif;
+}
+
+.font-familjen{
+  font-family: "Familjen Grotesk", Helvetica, Arial, sans-serif;
+}
+
+.ant-typography{
+  font-family: "Familjen Grotesk", Helvetica, Arial, sans-serif;;
 }
 
 
@@ -68,8 +75,8 @@ body {
 }
 
 .layout-dashboard .ant-layout-sider.sider-primary .profile img {
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
 }
 
 .layout-dashboard .ant-layout-sider.sider-primary .brand span {
