imporove sidanav pop up

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -304,12 +304,39 @@ body {
   border-bottom: 1px solid #f0f0f0;
 }
 
+.ant-popover {
+  position: fixed;
+}
+
+.ant-popover-placement-rightTop .ant-popover-inner {
+  border: 2px solid #7f8c9f;
+  border-radius: 3px;
+  box-shadow: 4px 4px rgba(6,41,66,.1);
+  position: absolute;
+  top: -25px;
+  left: 20px;
+}
+
 .ant-popover-inner-content {
   padding: 0;
 }
 
 .ant-popover-title {
   padding: 20px 16px 4px;
+}
+
+.ant-popover-placement-rightTop .ant-popover-arrow {
+  z-index: 1;
+  display: table;
+}
+
+.ant-popover-placement-rightTop .ant-popover-arrow-content {
+  width: 20px;
+  height: 20px;
+  border-bottom: 2px solid #7f8c9f;
+  border-left: 2px solid #7f8c9f;
+  left: 4.5px;
+  top: -10px;
 }
 
 /* .ant-popover-content{
