--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -18,6 +18,20 @@ body {
 } */
 
 
+.accordion-message-active {
+  width:55rem;
+  margin-right:8px;
+  margin-left:8px;
+
+}
+
+.accordion-message {
+  width:60rem;
+  margin-right:8px;
+  margin-left:8px;
+
+}
+
 .profile-photo {
   border-radius: 100%;
 }
@@ -323,7 +337,7 @@ body {
   padding: 0;
 }
 
-.ant-popover-arrow {
+/* .ant-popover-arrow {
   z-index: 1;
   display: table;
 }
@@ -364,7 +378,7 @@ body {
   border-left: 2px solid #7f8c9f;
   left: 25px;
   top: 1px;
-}
+} */
 /* end #sidebar */
 
 /* #global setting */
