--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -2092,7 +2092,7 @@ body {
 
 .ant-input {
   border-radius: 6px;
-  /* height: 40px; */
+  height: 40px;
   border: 1px solid #d9d9d9;
 }
 .ant-input-password {
@@ -3385,7 +3385,15 @@ transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 
 /* tabs end */
 
+/* custom notification */
+.ant-notification-topLeft .ant-notification-notice, .ant-notification-bottomLeft .ant-notification-notice {
+  margin-right: 500px;
+  margin-left: 500px;
+  margin-top: -30px;
 
+}
+
+/* end custom notification */
 
 
 
