--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -2092,13 +2092,17 @@ body {
 
 .ant-input {
   border-radius: 6px;
-  height: 40px;
+  /* height: 40px; */
   border: 1px solid #d9d9d9;
 }
+
+
+
 .ant-input-password {
   border-radius: 6px;
-  height: 40px;
   border: 1px solid #d9d9d9;
+  height: 40px;
+  
 }
 
 .ant-select-selector{
