--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -2092,12 +2092,20 @@ body {
 
 .ant-input {
   border-radius: 6px;
-  /* height: 40px; */
+  height: 40px;
   border: 1px solid #d9d9d9;
 }
 
+.ant-select-single .ant-select-selector {
+  display: flex;
+  align-items: center;
+}
 
-
+.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+  width: 100%;
+  height: 40px;
+  padding: 0 11px;
+}
 .ant-input-password {
   border-radius: 6px;
   border: 1px solid #d9d9d9;
